@@ -195,31 +195,28 @@ sub masonParameters
         }
     }
 
-    if (EBox::Config::boolean('debug')) {
-        my $report = $sysinfo->model('Debug')->value('enabled');
-        # TODO: currently apport reports are only enabled for openchange
-        if ($report and EBox::Global->modExists('openchange')) {
-            EBox::Sudo::silentRoot('ls /var/crash | grep -q ^_usr_sbin_samba');
-            if ($? == 0) {
-                my $style = 'margin-top: 10px; margin-bottom: -6px;';
-                my $text = __sx('Crash report found! Click the button if you want to send the following files anonymously to help fixing the issue: {p}. Although Zentyal will make a good use of this information, please review the files if you want to be sure they do not contain any sensible information. {oc}{obs}Submit crash report{cb} {obd}Discard{cb}{cc}',
-                                p  => '/var/crash/_usr_sbin_samba*',
-                                obs => "<button style=\"$style\" onclick=\"Zentyal.CrashReport.ready_to_report()\">",
-                                obd => "<button style=\"$style\" onclick=\"Zentyal.CrashReport.discard()\">",
-                                cb => '</button>', oc => '<center>', cc => '</center>');
-                my $optional = __('Optional');
-                my $email    = __('Email address');
-                my $tyText = __sx('Thank you for willing to submit your crash report. If you want to be notified about '
-                                  . 'its status, enter your email: {form}{obs}Submit crash report{cb}',
-                                 form => '<form class="formDiv" id="submit_crash_form"
-                                          style="margin: 15px 0;">'
-                                         . qq{<label>$email <span class="optional_field">$optional</span></label><input type="text" placeholder="foo\@example.org" name="email" class="inline-field"/>}
-                                         . '</form>',
-                                 obs  => "<button onclick=\"Zentyal.CrashReport.report()\">",
-                                 cb   => '</button>',
-                                 );
-                push (@params, 'crashreport' => {'ready' => $text, 'ty' => $tyText});
-            }
+    # TODO: currently apport reports are only enabled for openchange
+    if (EBox::Global->modExists('openchange')) {
+        EBox::Sudo::silentRoot('ls /var/crash | grep -q ^_usr_sbin_samba');
+        if ($? == 0) {
+            my $style = 'margin-top: 10px; margin-bottom: -6px;';
+            my $text = __sx('Crash report found! Click the button if you want to send the following files anonymously to help fixing the issue: {p}. Although Zentyal will make a good use of this information, please review the files if you want to be sure they do not contain any sensible information. {oc}{obs}Submit crash report{cb} {obd}Discard{cb}{cc}',
+                            p  => '/var/crash/_usr_sbin_samba*',
+                            obs => "<button style=\"$style\" onclick=\"Zentyal.CrashReport.ready_to_report()\">",
+                            obd => "<button style=\"$style\" onclick=\"Zentyal.CrashReport.discard()\">",
+                            cb => '</button>', oc => '<center>', cc => '</center>');
+            my $optional = __('Optional');
+            my $email    = __('Email address');
+            my $tyText = __sx('Thank you for willing to submit your crash report. If you want to be notified about '
+                                . 'its status, enter your email: {form}{obs}Submit crash report{cb}',
+                                form => '<form class="formDiv" id="submit_crash_form"
+                                        style="margin: 15px 0;">'
+                                        . qq{<label>$email <span class="optional_field">$optional</span></label><input type="text" placeholder="foo\@example.org" name="email" class="inline-field"/>}
+                                        . '</form>',
+                                obs  => "<button onclick=\"Zentyal.CrashReport.report()\">",
+                                cb   => '</button>',
+                                );
+            push (@params, 'crashreport' => {'ready' => $text, 'ty' => $tyText});
         }
     }
 
