@@ -1,3 +1,5 @@
+HEAD
+	+ Enable sending crash report with no debug mode
 4.0.4
 	+ Added subscription migration when upgrading from 3.2
 	+ Manage correctly internal errors in data table controller
